# depviz

./: README.md  pyproject.toml
server/: Dockerfile  README.md  pyproject.toml
server/data/: otel-demo.json
server/docs/: design.md  processing-spans.md
server/k8s/: depviz-server.yaml  otel-collector-agent-configmap.yaml
server/src/depviz_server/: aggregator.py  api.py  main.py  model.py  otlp_receiver.py
server/src/graph_service/: server.py
ui/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.ts  webpack.config.js
ui/k8s/: depviz-ui.yaml
ui/src/: details.ts  graph.ts  index.html  index.ts  model.ts  network.ts  style.css
